WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
123675
CodeBlock::jettison() shouldn't call baselineVersion()
https://bugs.webkit.org/show_bug.cgi?id=123675
Summary
CodeBlock::jettison() shouldn't call baselineVersion()
Filip Pizlo
Reported
2013-11-02 11:04:29 PDT
That method doesn't work right if we've cleared all code, and anyway we should call baselineAlternative() or even just alternative().
Attachments
the patch
(2.78 KB, patch)
2013-11-02 11:08 PDT
,
Filip Pizlo
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2013-11-02 11:07:42 PDT
<
rdar://problem/15376699
>
Filip Pizlo
Comment 2
2013-11-02 11:08:36 PDT
Created
attachment 215818
[details]
the patch
Geoffrey Garen
Comment 3
2013-11-02 14:09:41 PDT
Comment on
attachment 215818
[details]
the patch r=me
Filip Pizlo
Comment 4
2013-11-02 17:30:51 PDT
Landed in
http://trac.webkit.org/changeset/158507
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug