CodeBlock::jettison() shouldn't call baselineVersion() https://bugs.webkit.org/show_bug.cgi?id=123675

Reviewed by Geoffrey Garen.

Fix more uses of baselineVersion().

* bytecode/CodeBlock.cpp:
(JSC::CodeBlock::jettison):
* bytecode/CodeBlock.h:
* bytecode/ProfiledCodeBlockJettisoningWatchpoint.cpp:
(JSC::ProfiledCodeBlockJettisoningWatchpoint::fireInternal):



Canonical link: https://commits.webkit.org/141860@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158507 268f45cc-cd09-0410-ab3c-d52691b4dbfc