Source/JavaScriptCore/bytecode/CodeBlock.h
@@ -137,6 +137,9 @@ public:
     }
     
     CodeBlock* baselineAlternative();
+    
+    // FIXME: Get rid of this.
+    // https://bugs.webkit.org/show_bug.cgi?id=123677
     CodeBlock* baselineVersion();
 
     void visitAggregate(SlotVisitor&);
